tests/models/struct/unnamed/f64/fail/validate.rs
use dade::{model, Result};
#[model]
struct TestModel (
    #[field(validate = validate_fn)]
    f64
);
fn main() {}
